--- a/Vue/gabarit.twig
+++ b/Vue/gabarit.twig
@@ -7,6 +7,7 @@
           rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css">
     <link rel="stylesheet" href="Contenu/style.css">
+
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
@@ -19,22 +20,22 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item px-1">
-                        <a class="nav-link active" aria-current="page" href="index.php?action=menuCompte"><i class="fa fa-home"></i>&nbsp;&nbsp;Accueil</a>
+                        <a class="nav-link {% block isAccueil %}{% endblock %}" href="index.php?action=menuCompte"><i class="fa fa-home"></i>&nbsp;&nbsp;Accueil</a>
                     </li>
                     <li class="nav-item px-1">
-                        <a class="nav-link" href="index.php?action=match"><i class="fa fa-handshake"></i>&nbsp;&nbsp;Matchs</a>
+                        <a class="nav-link {% block isMatch %}{% endblock %}"  href="index.php?action=match"><i class="fa fa-handshake"></i>&nbsp;&nbsp;Matchs</a>
                     </li>
                     <li class="nav-item px-1">
-                        <a class="nav-link" href="index.php?action=convocation"><i class="fa fa-clipboard-list"></i>&nbsp;&nbsp;Convocations</a>
+                        <a class="nav-link {% block isConvocation %}{% endblock %}" href="index.php?action=convocation"><i class="fa fa-clipboard-list"></i>&nbsp;&nbsp;Convocations</a>
                     </li>
                     <li class="nav-item px-1">
-                        <a class="nav-link" href="index.php?action=absence"><i class="fas fa-id-card-alt"></i>&nbsp;&nbsp;Absences</a>
+                        <a class="nav-link {% block isAbsence %}{% endblock %}" href="index.php?action=absence"><i class="fas fa-id-card-alt"></i>&nbsp;&nbsp;Absences</a>
                     </li>
 
                 </ul>
             </div>
             <div class="navbar-nav ms-lg-auto mx-sm-5">
-                <a href="index.php?action=connexion" class="nav-item nav-link" onmouseenter="changeIcon(this,false)" onmouseleave="changeIcon(this,true)"><i class="fa fa-lock"></i>&nbsp;&nbsp;Se connecter</a>
+                <a href="index.php?action=connexion" class="nav-item nav-link {% block isConnexion %}{% endblock %}" onmouseenter="changeIcon(this,false)" onmouseleave="changeIcon(this,true)"><i class="fa fa-lock"></i>&nbsp;&nbsp;Se connecter</a>
             </div>
         </div>
     </nav>
@@ -54,5 +55,9 @@
         else lock.replace("fa-lock","fa-unlock");
     }
 </script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+    crossorigin="anonymous"></script>
 </body>
 </html>
