--- a/Vue/vueConnexion.twig
+++ b/Vue/vueConnexion.twig
@@ -1,5 +1,9 @@
 {% extends "gabarit.twig" %}
 
+{% block isConnexion %}
+    active
+{% endblock %}
+
 {% block title %}
 Convocations sportives
 {% endblock %}
