--- a/Vue/vueMatch.twig
+++ b/Vue/vueMatch.twig
@@ -1,5 +1,10 @@
 {% extends "gabarit.twig" %}
 
+{% block isMatch %}
+    active
+{% endblock %}
+
+
 {% block title %}
 Convocations sportives
 {% endblock %}
@@ -21,8 +26,8 @@ Convocations sportives
                     <th>Heure</th>
                     <th>Terrain</th>
                     <th>Site</th>
-                    <th>Supprimer</th>
                     <th>Modifier</th>
+                    <th>Supprimer</th>
                 </tr>
             </thead>
             <tbody>
@@ -33,16 +38,16 @@ Convocations sportives
                     <td>{{ match['Competition'] }}</td>
                     <td>{{ match['Equipe'] }}</td>
                     <td>{{ match['EquipeAdverse'] }}</td>
-                    <td>{{ match['Date'] }}</td>
+                    <td>{{ match['Date']|date("d/m/Y") }}</td>
                     <td>{{ match['Heure'] }}</td>
                     <td>{{ match['Terrain'] }}</td>
                     <td>{{ match['Site'] }}</td>
+                    <td><form method="post" action="index.php?action=accesModifierMatch&num={{ match['NumMatch'] }}">
+                            <button type="submit" class="btn btn-outline-dark border-0"><i class="fa fa-pen"></i></button>
+                        </form></td>
                     <td><form method="post" action="index.php?action=supprimerMatch">
                             <input type="hidden" name="num" value="{{ match['NumMatch'] }}" />
-                            <button type="submit" class="btn btn-danger"><i class="fa fa-times"></i></button>
-                        </form></td>
-                    <td><form method="post" action="index.php?action=accesModifierMatch&num={{ match['NumMatch'] }}">
-                            <button type="submit" class="btn btn-secondary"><i class="fa fa-pen"></i></button>
+                            <button type="submit" class="btn btn-danger border-0"><i class="fa fa-times"></i></button>
                         </form></td>
                 </tr>
             {% else %}
@@ -133,17 +138,17 @@ Convocations sportives
 
 
 <script>
-    var today = new Date().toISOString().split('T')[0];
-    document.querySelector('input[type=date]').setAttribute('min', today);
+    // var today = new Date().toISOString().split('T')[0];
+    // document.querySelector('input[type=date]').setAttribute('min', today);
 
     var date = document.querySelector('input[type=date]');
     function weekEnd(e) {
         var jour = new Date(e.target.value).getUTCDay();
-        if( jour == 0 || jour == 6 ){
+        if(jour == 0){
             e.target.setCustomValidity('');
 
         } else {
-            e.target.setCustomValidity('Veuillez choisir une date valide (Samedi ou Dimanche)');
+            e.target.setCustomValidity('Veuillez choisir une date valide (Dimanche)');
         }
     }
     date.addEventListener('change',weekEnd);
