--- a/Vue/vueModificationMatch.twig
+++ b/Vue/vueModificationMatch.twig
@@ -1,5 +1,9 @@
 {% extends "gabarit.twig" %}
 
+{% block isMatch %}
+    active
+{% endblock %}
+
 {% block title %}
 Convocations sportives
 {% endblock %}
