--- a/Vue/vueAccueil.twig
+++ b/Vue/vueAccueil.twig
@@ -6,7 +6,8 @@
 {% endblock %}
 
 {% block contenu %}
-<!---------------------- CATEGORIES ---------------------->
+
+{############# CATEGORIE #############}
 <!--
 <div class="row pt-5">
     <div class="col-6">
@@ -48,7 +49,8 @@
     </div>
 </div>
 -->
-<!---------------------- COMPETITIONS ---------------------->
+
+{############# COMPETITION #############}
 <!--
 <div class="row pt-5">
     <div class="col-6">
@@ -90,7 +92,8 @@
 </div>
 -->
 
-<!---------------------- EQUIPES ---------------------->
+
+{############# EQUIPES #############}
 <!--
 <div class="row pt-5">
     <div class="col-6">
@@ -133,11 +136,8 @@
 
 
 
-<!---------------------- CONVOCATION ---------------------->
+{############# CONVOCATION #############}
 
-<!-- voir la liste des convocs pour un match (tous les joueurs qui sont convoqués) -->
-<!-- voir la liste des convocs pour un joueur (tous les matchs auxquels est convoqué le joueur) -->
-<!-- ici la liste de toutes les convocs, le joueur et le match -->
 <div class="bs-callout" style="border-left-color: #001D6E">
     Bienvenue sur ce site de convocations sportives
 </div>
