--- a/Vue/vueConnexion.twig
+++ b/Vue/vueConnexion.twig
@@ -5,10 +5,13 @@
 {% endblock %}
 
 {% block title %}
-Convocations sportives
+    Convocations sportives - Se Connecter
 {% endblock %}
 
 {% block contenu %}
+
+{############# CONNEXION #############}
+
 <div class="row mt-5">
     <div class="col-6">
         <h1>Se connecter</h1>
@@ -59,6 +62,7 @@ Convocations sportives
         </table>
     </div>
 </div>
+
 
 <div class="row py-5">
     <div class="col-5">
