--- a/Vue/vueMatch.twig
+++ b/Vue/vueMatch.twig
@@ -6,11 +6,13 @@
 
 
 {% block title %}
-Convocations sportives
+    Convocations sportives - Informations sur un Match
 {% endblock %}
 
 {% block contenu %}
-<!---------------------- MATCHS ---------------------->
+
+
+{############# MATCH #############}
 
 <div class="row pt-5">
     <div class="col">
