--- a/Vue/vueMenuCompte.twig
+++ b/Vue/vueMenuCompte.twig
@@ -5,15 +5,14 @@
 {% endblock %}
 
 {% block title %}
-Convocations sportives
+    Convocations sportives - Accueil
 {% endblock %}
 
 {% block contenu %}
-<!--<h1><a href="index.php?action=match">Liste des Matchs programmés</a></h1>-->
-<!--<h1><a href="index.php?action=convocation">Liste des Convocations</a></h1>-->
-<!--<h1><a href="index.php?action=absence">Liste des Absences</a></h1>-->
 
-<!---------------------- JOUEURS ---------------------->
+
+{############# ACCUEIL #############}
+
 <div class="row pt-5">
     <div class="col-6">
         <h1>Joueurs du Club</h1>
