--- a/Vue/vueModificationMatch.twig
+++ b/Vue/vueModificationMatch.twig
@@ -5,10 +5,12 @@
 {% endblock %}
 
 {% block title %}
-Convocations sportives
+    Convocations sportives - Modification d'un Match
 {% endblock %}
 
 {% block contenu %}
+
+{############# MODIFICATION DE MATCH #############}
 
 <div class="row pt-5">
     <h1>Modifier un Match</h1>
