--- a/Vue/vueAbsence.twig
+++ b/Vue/vueAbsence.twig
@@ -5,12 +5,14 @@ active
 {% endblock %}
 
 {% block title %}
-Convocations sportives
+    Convocations sportives - Absences
 {% endblock %}
 
 {% block contenu %}
-<!---------------------- ABSENCES ---------------------->
-<div class="row pt-5">
+
+{############# ABSENCES #############}
+
+    <div class="row pt-5">
     <div class="col-6">
         <h1>Liste des Absents</h1>
         <table class="table border table-striped table-hover">
@@ -24,7 +26,6 @@ Convocations sportives
                 </tr>
             </thead>
             <tbody>
-
                 {% for absence in absences %}
                 <tr>
                     <td>{{ absence['Prenom'] }}</td>
@@ -46,6 +47,7 @@ Convocations sportives
             </tbody>
         </table>
     </div>
+
 
     <div class="offset-1 col-5">
         <h1>Ajouter une absence</h1>
@@ -95,6 +97,8 @@ Convocations sportives
     </div>
 </div>
 
+
+{############# RESTRICTION DES DATES #############}
 <script>
     // var today = new Date().toISOString().split('T')[0];
     // document.querySelector('input[type=date]').setAttribute('min', today);
