--- a/Vue/vueInformationsConvocation.twig
+++ b/Vue/vueInformationsConvocation.twig
@@ -6,11 +6,13 @@
 
 
 {% block title %}
-    Convocations sportives
+    Convocations sportives - Informations sur une Convocation
 {% endblock %}
 
 {% block contenu %}
-    <!---------------------- MATCHS ---------------------->
+
+
+{############# INFORMATIONS CONVOCATIONS #############}
 
 <div class="row pt-5">
     <div class="col-6">
