--- a/Vue/gabarit.twig
+++ b/Vue/gabarit.twig
@@ -21,6 +21,7 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+            {% if role != 'V' %}
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item px-1">
@@ -35,11 +36,15 @@
                     <li class="nav-item px-1">
                         <a class="nav-link {% block isAbsence %}{% endblock %}" href="index.php?action=absence"><i class="fas fa-id-card-alt"></i>&nbsp;&nbsp;Absences</a>
                     </li>
-
                 </ul>
             </div>
+            {% endif %}
             <div class="navbar-nav ms-lg-auto mx-sm-5">
-                <a href="index.php?action=connexion" class="nav-item nav-link {% block isConnexion %}{% endblock %}" onmouseenter="changeIcon(this,false)" onmouseleave="changeIcon(this,true)"><i class="fa fa-lock"></i>&nbsp;&nbsp;Se connecter</a>
+                {% if role == 'V' %}
+                    <a href="index.php?action=afficherConnexion" class="nav-item nav-link {% block isConnexion %}{% endblock %}" onmouseenter="changeIcon(this,false)" onmouseleave="changeIcon(this,true)"><i class="fa fa-lock"></i>&nbsp;&nbsp;Se connecter</a>
+                {% else %}
+                    <a href="index.php?action=deconnexion" class="nav-item nav-link" onmouseenter="changeIcon(this,false)" onmouseleave="changeIcon(this,true)"><i class="fa fa-door-closed"></i>&nbsp;&nbsp;Se déconnecter</a>
+                {% endif %}
             </div>
         </div>
     </nav>
@@ -61,9 +66,15 @@
 <script>
     function changeIcon(e,iconLock) {
         let lock = e.firstChild.classList;
-        if(iconLock)
-            lock.replace("fa-unlock","fa-lock");
-        else lock.replace("fa-lock","fa-unlock");
+        if(iconLock) {
+            lock.replace("fa-unlock", "fa-lock");
+            lock.replace("fa-door-open","fa-door-closed");
+        }
+        else {
+            lock.replace("fa-lock","fa-unlock");
+            lock.replace("fa-door-closed", "fa-door-open");
+
+        }
     }
 </script>
 
