--- a/Vue/vueConnexion.twig
+++ b/Vue/vueConnexion.twig
@@ -17,17 +17,23 @@
         <h1>Se connecter</h1>
         <div class="card">
             <div class="card-body">
+                {% if erreurs %}
+                    <div class="alert alert-danger alert-dismissible fade show mb-3" role="alert">
+                        <strong>Échec de la connexion :</strong> {{ erreurs }}
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                {% endif %}
                 <form method="post" action="index.php?action=connexion">
                     <div class="form-group row mt-2">
                         <label for="login" class="col-3 col-form-label">Utilisateur</label>
                         <div class="col">
-                            <input type="text" class="form-control" id="login" placeholder="Nom d'utilisateur" ">
+                            <input type="text" name="nomUtilisateur" class="form-control" id="login" placeholder="Nom d'utilisateur" >
                         </div>
                     </div>
                     <div class="form-group row mt-2">
                         <label for="password" class="col-3 col-form-label">Mot de passe</label>
                         <div class="col">
-                            <input type="password" class="form-control" id="password" placeholder="Mot de Passe">
+                            <input type="password" name="mdp" class="form-control" id="password" placeholder="Mot de Passe">
                         </div>
                         <div class="form-group row mt-2 justify-content-center">
                             <button type="submit" class="btn btn-primary col-5">Se connecter</button>
